[Back-End][feat] added functionality to rooms to show current users that are in a room